package com.tav.progetto.analysis.core;

public enum Severity { LOW, MEDIUM, HIGH }
