package com.tav.progetto.analysis.core;

public enum TargetType {
    DIRECTORY,
    JAR
}
