package com.tav.progetto.analysis.metrics;

public class ClassMetrics {
    public String className;
    public int totalMethods;
    public int publicMethods;
    public int fields;
    public int depthOfInheritance;
    public int maxParametersPerMethod;
    public int outgoingDependencies;
    public boolean isInterface;
    public boolean hasOnlyConstants;
}
